ores/auto-commit => 'set'